--- a/Question2b/Q2b.html
+++ b/Question2b/Q2b.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Annoucement</title>
+    <title>Annoucement responsive</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Q2a.css">
+    <link rel="stylesheet" href="Q2b.css">
 </head>
 <body>
 
